--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
         <title>أذكار</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="/style.css">
-        <link rel="icon" href="/icon.jfif"> 
+        <link rel="icon" href="/icon.jpg"> 
         <script src="/script.js"></script>
     </head>
     <body>
-            <img class="himg" src="/body.jfif">
+            <img class="himg" src="/body.jpg">
             <button class="btn1"><a href="/الصباح/index.html">أذكار الصباح</a></button>
             <button class="btn2"><a href="/المساء/index.html">أذكار المساء</a></button>
     </body>
